# titty

./: CMakeLists.txt  README.md  __init__.py  __main__.py  fix-proj.sh  launcher.c  real_setup.py  setup.py  titty.spec
ext/: CMakeLists.txt
ext/dbus/: CMakeLists.txt
ext/harfbuzz/: CMakeLists.txt
ext/lcms2/: CMakeLists.txt
ext/python/: CMakeLists.txt
ext/wayland/: CMakeLists.txt  gen_code.sh
glfw/: CMakeLists.txt  dbus_glfw.c  input.c  wl_init.c  wl_monitor.c  wl_window.c
kittens/: CMakeLists.txt
kitty/: CMakeLists.txt  boss.py  child-monitor.c  child.c  colors.c  data-types.c  keys.c  line-buf.c  line.c  main.py  mouse.c  screen.c  state.c  tabs.py  window.py
kitty/options/: parse.py  types.py
